<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Character Keeper</string>
    <string name="dd5e">Dungeons &amp; Dragons 5th Edition</string>
    <string name="action_settings">Settings</string>

    //Titles
    <string name="title_activity_new_dd5_e">D&amp;D 5th Edition</string>
    <string name="title_activity_test_display">TestDisplay</string>
    <string name="title_activity_dd5_e__edit">D&amp;D 5th Edition</string>
    <string name="title_activity_dd5e_equipment_edit">D&amp;D 5th Edition</string>
    <string name="title_activity_dd5e_equipment">D&amp;D 5th Edition</string>
    <string name="title_activity_dd5e_display">D&amp;D 5th Edition</string>

    //Buttons
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="Load">Load</string>
    <string name="Back">Back</string>
    <string name="AddWeap">Add Weapon</string>
    <string name="AddPro">Add Protective Item</string>
    <string name="AddItem">Add Item</string>
    <string name="heal">Heal</string>

    //Title Descriptions
    <string name="basicInfo">Basic Information</string>
    <string name="equipment">Equipment</string>
    <string name="mainMenu">Main Menu</string>

    //Headers
    <string name="attributes">Attributes</string>
    <string name="saves">Saving Throws</string>
    <string name="skills">Skills</string>
    <string name="weapons">Weapons</string>
    <string name="Protective">Protective Items</string>

    //Character Info
    <string name="name">Name</string>
    <string name="Class">Class</string>
    <string name="level">Level</string>
    <string name="race">Race</string>
    <string name="alignment">Alignment</string>
    <string name="hitDice">Hit Dice</string>
    <string name="hp">Hit Points</string>
    <string name= "maxHP">Max Hit Points:</string>
    <string name="currentHP">Current Hit Points:</string>
    <string name="deltaHP">Change in Hit Points</string>
    <string name="proficiency">Proficiency</string>
    <string name="speed">Speed</string>
    <string name="exp">Experince</string>
    <string name="namePrint">Name: </string>
    <string name="classPrint">Class: </string>
    <string name="levelPrint">Level: </string>
    <string name="racePrint">Race: </string>
    <string name="alignmentPrint">Alignment: </string>
    <string name="hitDicePrint">Hit Dice: </string>
    <string name="hpPrint">Hit Points: </string>
    <string name="proficiencyPrint">Proficiency: </string>
    <string name="speedPrint">Speed: </string>
    <string name="expPrint">Experience: </string>
    <string name="mod">Modifier</string>
    <string name="modPrint">Modifier: </string>

    //Attributes
    <string name="str">Strength</string>
    <string name="dex">Dexterity</string>
    <string name="con">Constitution</string>
    <string name="inte">Intelligence</string>
    <string name="wis">Wisdom</string>
    <string name="cha">Charisma</string>
    <string name="strPrint">Strength: </string>
    <string name="dexPrint">Dexterity: </string>
    <string name="conPrint">Constitution: </string>
    <string name="intePrint">Intelligence: </string>
    <string name="wisPrint">Wisdom: </string>
    <string name="chaPrint">Charisma: </string>

    //Skills
    <string name="acrobatics">Acrobatics</string>
    <string name="animalHandling">Animal Handling</string>
    <string name="arcana">Arcana</string>
    <string name="athletics">Athletics</string>
    <string name="deception">Deception</string>
    <string name="history">History</string>
    <string name="insight">Insight</string>
    <string name="intimidation">Intimidation</string>
    <string name="investigation">Investigation</string>
    <string name="medicine">Medicine</string>
    <string name="nature">Nature</string>
    <string name="perception">Perception</string>
    <string name="performance">Performance</string>
    <string name="persuasion">Persuasion</string>
    <string name="religion">Religion</string>
    <string name="sleightofHand">Sleight of Hand</string>
    <string name="stealth">Stealth</string>
    <string name="survival">Survival</string>

    //Items
    <string name="dmg">Damage</string>
    <string name="attbns">Attack Bonus</string>
    <string name="ac">Armor Class</string>
    <string name="info">Information</string>
    <string name="penalty">Penalty</string>
    <string name="locWorn">Location Worn</string>
    <string name="funds">Funds</string>
    <string name="copper">Copper</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="platnium">Platnium</string>
    <string name="itemWeight">Weight</string>
    <string name="pack">Backpack</string>
    <string name="items">Items</string>
    <string name="dmgPrint">Damage:</string>
    <string name="attbnsPrint">Attack Bonus:</string>
    <string name="acPrint">Armor Class:</string>
    <string name="infoPrint">Information:</string>
    <string name="penaltyPrint">Penalty:</string>
    <string name="locWornPrint">Location Worn:</string>
    <string name="itemWeightPrint">Weight:</string>
    <string name="quantity">Quantity</string>
    <string name="quantityPrint">Quantity:</string>

    //Weapon Properties
    <string name="bludgeoning">Bludgeoning</string>
    <string name="piercing">Piercing</string>
    <string name="slashing">Slashing</string>
    <string name="ammo">Ammunition</string>
    <string name="finesse">Finesse</string>
    <string name="heavy">Heavy</string>
    <string name="light">Light</string>
    <string name="loading">Loading</string>
    <string name="range">Range</string>
    <string name="reach">Reach</string>
    <string name="thrown">Thrown</string>
    <string name="twoHanded">Two-Handed</string>
    <string name="versatile">Versatile</string>
    <string name="ammoType">Ammunition Type</string>
    <string name="rangeInc">Range Increment</string>


</resources>
