<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/acPrint"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/saves"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heal" />

        <TextView
            android:id="@+id/maxHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/maxHP"
            android:textColor="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/ac"
            app:layout_constraintLeft_toRightOf="@+id/ac"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/currentHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/currentHP"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText" />

        <Button
            android:id="@+id/heal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="54dp"
            android:text="@string/heal"
            android:textSize="12sp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/deltaHP"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@+id/currentHP"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxHP" />

        <Button
            android:id="@+id/button5"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:text="@string/dmg"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/heal"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/strSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/strPrint"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView48" />

        <TextView
            android:id="@+id/dexSave"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:text="@string/dexPrint"
            android:textColor="@color/black"
            android:layout_marginLeft="250dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/strSave" />

        <TextView
            android:id="@+id/conSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/conPrint"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strSave" />

        <TextView
            android:id="@+id/intSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:text="@string/intePrint"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/conSave"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/wisSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/wisPrint"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conSave" />

        <TextView
            android:id="@+id/chaSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:text="@string/chaPrint"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/wisSave"
            app:layout_constraintLeft_toLeftOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>